deployment/test-env/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: columbus-api
    app.kubernetes.io/component: columbus-api
    app.kubernetes.io/instance: columbus-api
    app.openshift.io/runtime-version: latest
  name: columbus-api
spec:
  host: columbus-api-cloud-operations.apps.tocpt2.tcs.turkcell.tgc
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: columbus-api
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
